@@ -5,6 +5,7 @@ Version 1.4
 * mk5dir: Mark4 directories from after 2009 Dec 31 would end up with wrong MJD
 * Support for Streamstor SDK 9.0
 * Support for difxVersion in difxStartMessage
+* Don't launch a job near time(0)%10 = 5 to avoid getModules clash
 
 Version 1.3
 ~~~~~~~~~~~
